--- a/build.gradle
+++ b/build.gradle
@@ -153,6 +153,7 @@ dependencies {
     runtimeOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}"))
 
     runtimeOnly(fg.deobf("curse.maven:mekanism-268560:4807067"))
+    runtimeOnly(fg.deobf("curse.maven:top-245211:4629624"))
 
     // Example mod dependency with JEI - using fg.deobf() ensures the dependency is remapped to your development mappings
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
